Modified bundle Gemfile to handle CI env vars (GO_UPLOADKEYSTORE, GO_ACCOUNT_SEVICE)

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,12 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Keys credentials for Debug signin
+KEY_ALIAS_DEV=androiddebugkey
+KEY_PASSWORD_DEV=android
+STORE_PASSWORD_DEV=android
+# Keys credentials for Release signin
+KEY_ALIAS_PROD=androiddebugkey
+KEY_PASSWORD_PROD=android
+STORE_PASSWORD_PROD=android
