--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,6 +119,14 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
 
+/**
+ * Define signin vars 
+ * Keys credentials for signin, whether debug or release
+ */
+def KEY_ALIAS = System.getenv("KEY_ALIAS") ?: "androiddebugkey"
+def KEY_PASSWORD = System.getenv("KEY_PASSWORD") ?: "android"
+def STORE_PASSWORD = System.getenv("STORE_PASSWORD") ?: "android"
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
