--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,10 @@ def KEY_ALIAS = System.getenv("KEY_ALIAS") ?: "androiddebugkey"
 def KEY_PASSWORD = System.getenv("KEY_PASSWORD") ?: "android"
 def STORE_PASSWORD = System.getenv("STORE_PASSWORD") ?: "android"
 
+
+def APP_VERSION = System.getenv("APP_VERSION") ?: "v1.0"
+def APP_BUIL_NUMBER = System.getenv("APP_BUIL_NUMBER") ?: 1
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -139,8 +143,8 @@ android {
         applicationId "com.basicrn.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode APP_BUIL_NUMBER
+        versionName APP_VERSION
     }
     splits {
         abi {
