--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ anchors:
             key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
       - &d_step4
           run: |
-            sudo gem install bundler -v 2.0.2
+            bundle --version
+            bundle exec 'gem --version'
+            gem install bundler -v 2.0.2
             bundle install
       - &d_step5
           save_cache:
@@ -158,7 +160,6 @@ workflows:
             - android-beta-hold # Run only if Beta was approved
 
       - android-alpha:
-          <<: *only_version
           requires:
             - node
       # Deliver Beta only if Beta was approved
