--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
           store_artifacts:
             path: android/app/build/outputs/apk/release/app-release.apk
     steps:
-      [*d_step1,*d_step2,*d_step3,*d_step4,*d_step5,*d_step6,*run,*store_artifacts]
+      [*d_step1,*d_step2,*d_step3,*d_step4,*d_step5,*run,*store_artifacts]
   android-beta:
     <<: *base_deploy
     steps+:
