--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,7 @@ jobs:
               bundle exec fastlane alpha
       - &store_artifacts
           store_artifacts:
-            path: android/app/build/outputs/apk/release/app-release.apk
+            path: app/build/outputs/apk/release/
     steps:
       [*d_step1,*d_step2,*d_step3,*d_step4,*d_step5,*run,*store_artifacts]
   android-beta:
