--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ anchors:
           run: |
             gem install bundler -v 2.0.2
             bundle install
+            export APP_VERSION=$CIRCLE_TAG
+            export APP_BUIL_NUMBER=$CIRCLE_BUILD_NUM
       - &d_step5
           save_cache:
             key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
