--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ anchors:
           run: |
             gem install bundler -v 2.0.2
             bundle install
-            export APP_VERSION=$CIRCLE_TAG
-            export APP_BUIL_NUMBER=$CIRCLE_BUILD_NUM
+            echo "APP_VERSION=$CIRCLE_TAG" >> $BASH_ENV
+            echo "APP_BUIL_NUMBER=$CIRCLE_BUILD_NUM" >> $BASH_ENV
       - &d_step5
           save_cache:
             key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
@@ -152,12 +152,12 @@ workflows:
           <<: *only_version
       - android-beta-hold:
           type: approval
-          requires:
-            - android-alpha # Run after the Alpha build has succeeded
+          requires: # Run after the Alpha build has succeeded
+            - android-alpha
       - android-dist-hold:
           type: approval
-          requires:
-            - android-beta-hold # Run only if Beta was approved
+          requires: # Run only if Beta was approved
+            - android-alpha
 
       - android-alpha:
           <<: *only_version
@@ -168,7 +168,7 @@ workflows:
           <<: *only_version
           requires:
             - android-beta-hold
-      # Deliver Distribution only if Beta & Distribution was approved 
+      # Deliver Distribution only if Distribution was approved 
       - android-dist:
           <<: *only_version
           requires:
