--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,7 +128,7 @@ def KEY_PASSWORD = System.getenv("KEY_PASSWORD") ?: "android"
 def STORE_PASSWORD = System.getenv("STORE_PASSWORD") ?: "android"
 
 
-def APP_VERSION = System.getenv("APP_VERSION") ?: "v1.0"
+def APP_VERSION = System.getenv("APP_VERSION").toString() ?: "v1.0"
 def APP_BUIL_NUMBER = System.getenv("APP_BUIL_NUMBER") ?: 1
 
 println 'APP_VERSION:'
