--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,7 @@ def STORE_PASSWORD = System.getenv("STORE_PASSWORD") ?: "android"
 
 
 def APP_VERSION = System.getenv("APP_VERSION").toString() ?: "v1.0"
-def APP_BUIL_NUMBER = System.getenv("APP_BUIL_NUMBER") ?: 1
+def APP_BUIL_NUMBER = System.getenv("APP_BUIL_NUMBER").toInteger() ?: 1
 
 println 'APP_VERSION:'
 println APP_VERSION
