--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,15 @@ anchors:
     steps:
       - &g_step1
           run:
-            name: "Download Artifacts"
+            name: "Download Artifacts & Dependences"
             command: |
               mkdir artifacts
+              sudo apt install rename
               export USERNAME=$CIRCLE_PROJECT_USERNAME
               export BUILD_NUMBER=$CIRCLE_PREVIOUS_BUILD_NUM
               export PROJECT=$CIRCLE_PROJECT_REPONAME
               curl https://circleci.com/api/v1.1/project/github/$USERNAME/$PROJECT/$BUILD_NUMBER/artifacts?circle-token=$CIRCLE_TOKEN | grep -o 'https://[^"]*' | sed -e "s/$/?circle-token=$CIRCLE_TOKEN/" | wget -P artifacts/ -v -i -
-              rename -v -n 's/.circle-token=\Q$ENV{CIRCLE_TOKEN}\E//' artifacts/*
+              rename 's/.circle-token=\Q$ENV{CIRCLE_TOKEN}\E//' artifacts/*
       - &g_step2
           run:
             name: "Preparing GitHub Release"
